Registration feature added

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "restful-api",
-  "version": "1.0.0",
-  "description": "Provides CRUD operations for the React-Native client. ",
+  "version": "1.1.0",
+  "description": "Simple RESTful NodeJS application programming interface (API).",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon"
   },
   "keywords": [
     "REST",
@@ -16,15 +16,18 @@
     "Logout",
     "Register",
     "PUT",
-    "DELETE"
+    "DELETE",
+    "JSON Web Token"
   ],
   "author": "Alex Machin",
   "license": "MIT",
   "dependencies": {
-    "config": "^3.0.1",
+    "bcrypt": "^3.0.4",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "helmet": "^3.15.1",
     "joi": "^14.3.1",
+    "lodash": "^4.17.11",
     "mongoose": "^5.4.14",
     "morgan": "^1.9.1"
   }
