--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Simple RESTful NodeJS application programming interface (API).",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon"
+    "start": "nodemon",
+    "test": "jest --verbose"
   },
   "keywords": [
     "REST",
@@ -25,6 +26,7 @@
     "bcrypt": "^3.0.4",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "express-async-errors": "^3.1.1",
     "helmet": "^3.15.1",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.0",
@@ -33,5 +35,9 @@
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0"
+  },
+  "devDependencies": {
+    "jest": "^24.1.0",
+    "supertest": "^3.4.2"
   }
 }
