--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple RESTful NodeJS application programming interface (API).",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon",
+    "start": "node index.js",
     "test": "jest --verbose"
   },
   "keywords": [
